--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ Django==4.2.5
 psycopg2-binary==2.9.7
 sqlparse==0.4.4
 typing_extensions==4.8.0
+django-crispy-forms==1.14.0
+crispy-bootstrap5==0.6
