--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-Django==4.2.5
+Django==4.2.9
 psycopg2-binary==2.9.7
 sqlparse==0.4.4
 typing_extensions==4.8.0
@@ -7,3 +7,4 @@ django-crispy-forms==1.14.0
 crispy-bootstrap5==0.6
 django-allauth==0.50.0
 python-dotenv==1.0.1
+django-debug-toolbar==4.4.6
